--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mobile.flutter_application">
+
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="flutter_application"
         android:icon="@mipmap/ic_launcher">
